force-app/main/default/objects/Account/fields/Payment_Terms_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Code__c</fullName>
    <description>Payment Terms- Permitted</description>
    <inlineHelpText>Selecione a forma de pagamento</inlineHelpText>
    <label>Payment Terms Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>31</fullName>
                <label>Cash</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>21</fullName>
                <default>true</default>
                <label>À vista</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>50% Prepayment, 50% COD</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>7d</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>10d</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>14d</label>
            </value>
            <value>
                <fullName>49</fullName>
                <label>28d</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>30d</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>35d</label>
            </value>
            <value>
                <fullName>38</fullName>
                <label>45d</label>
            </value>
            <value>
                <fullName>39</fullName>
                <label>60d</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>75d</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>90d</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>120d</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>100% prepayment before production</label>
            </value>
            <value>
                <fullName>42</fullName>
                <label>100% prepayment before shipment</label>
            </value>
            <value>
                <fullName>43</fullName>
                <label>30% Prepayment, 70% COD</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>30/40</label>
            </value>
            <value>
                <fullName>46</fullName>
                <label>30/45</label>
            </value>
            <value>
                <fullName>47</fullName>
                <label>30/45/60</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>30/45/60/75</label>
            </value>
            <value>
                <fullName>44</fullName>
                <label>30/60</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>30/60/90</label>
            </value>
            <value>
                <fullName>54</fullName>
                <label>45/60/90</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>60/90</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>50% Prepayment, 50% Net14-C</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>Letter of Credit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>