force-app/main/default/objects/Account/fields/PaymentsDelayed__c.field-meta.xml
<CustomField>
    <fullName>PaymentsDelayed__c</fullName>
    <label>Payments Delayed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>