force-app/main/default/objects/Account/fields/PaymentsDone__c.field-meta.xml
<CustomField>
    <fullName>PaymentsDone__c</fullName>
    <label>Payments Done</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>