force-app/main/default/objects/Account/fields/PaymentsOpen__c.field-meta.xml
<CustomField>
    <fullName>PaymentsOpen__c</fullName>
    <label>Payments Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>