force-app/main/default/objects/Account/fields/Purchase_Department_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Department_E_mail__c</fullName>
    <inlineHelpText>For multiply emails, separate them with semicolon.</inlineHelpText>
    <label>Purchase Department E-mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>