force-app/main/default/objects/Account/fields/Quality_Regulatory_Email__c.field-meta.xml
<CustomField>
    <fullName>Quality_Regulatory_Email__c</fullName>
    <inlineHelpText>For multiply emails, separate them with semicolon.</inlineHelpText>
    <label>Quality &amp; Regulatory Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>