force-app/main/default/objects/Account/fields/RazaoSocial__c.field-meta.xml
<CustomField>
    <fullName>RazaoSocial__c</fullName>
    <label>Razão Social</label>
    <length>150</length>
    <type>Text</type>
</CustomField>