force-app/main/default/objects/Account/fields/Receiving_Hours__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Hours__c</fullName>
    <label>Receiving Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>