force-app/main/default/objects/Account/fields/RegimeEspecial__c.field-meta.xml
<CustomField>
    <fullName>RegimeEspecial__c</fullName>
    <defaultValue>&apos;Não&apos;</defaultValue>
    <inlineHelpText>Caso seja &quot;Sim&quot;, solicite a documentação que comprove o regime e anexe na conta após criar.</inlineHelpText>
    <label>Regime Especial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>