force-app/main/default/objects/Account/fields/Sales_Tax_Exempt_Account__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Exempt_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is the field to indicate whether an account is tax exempt.
If it is check as True, You must Upload the respective document into Files list.</inlineHelpText>
    <label>Sales Tax Exempt Account</label>
    <type>Checkbox</type>
</CustomField>