force-app/main/default/objects/Account/fields/Sales_Tax_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Registration_Number__c</fullName>
    <label>Sales Tax Registration Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>