force-app/main/default/objects/Account/fields/SAP_Database__c.field-meta.xml
<CustomField>
    <fullName>SAP_Database__c</fullName>
    <description>Field created by C2O2 ONLY for Mulesoft integration purposes.</description>
    <label>SAP_Database</label>
    <length>5</length>
    <type>Text</type>
</CustomField>