force-app/main/default/objects/Account/fields/SAP_Email_List__c.field-meta.xml
<CustomField>
    <fullName>SAP_Email_List__c</fullName>
    <description>Receiving a list of Email from SAP with &quot;;&quot; separator.</description>
    <label>SAP Email List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>