force-app/main/default/objects/Account/fields/Shipping_Email__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Email__c</fullName>
    <inlineHelpText>For multiply emails, separate them with semicolon.</inlineHelpText>
    <label>Shipping Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>