force-app/main/default/objects/Account/fields/Shipping_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Number__c</fullName>
    <label>Shipping Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>