force-app/main/default/objects/Account/fields/ShippingComplement__c.field-meta.xml
<CustomField>
    <fullName>ShippingComplement__c</fullName>
    <label>Complemento de entrega</label>
    <length>100</length>
    <type>Text</type>
</CustomField>