force-app/main/default/objects/Account/fields/ShippingNeighborhood__c.field-meta.xml
<CustomField>
    <fullName>ShippingNeighborhood__c</fullName>
    <label>Bairro de entrega</label>
    <length>100</length>
    <type>Text</type>
</CustomField>