force-app/main/default/objects/Account/fields/ShippingNumber__c.field-meta.xml
<CustomField>
    <fullName>ShippingNumber__c</fullName>
    <label>Número de entrega</label>
    <length>100</length>
    <type>Text</type>
</CustomField>