force-app/main/default/objects/Account/fields/ShopifyId__c.field-meta.xml
<CustomField>
    <fullName>ShopifyId__c</fullName>
    <description>Get Customer ShopifyId as an Externalkey</description>
    <externalId>true</externalId>
    <label>ShopifyId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>