force-app/main/default/objects/Account/fields/Special_Pricing_price_book__c.field-meta.xml
<CustomField>
    <fullName>Special_Pricing_price_book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Special Pricing price book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>