force-app/main/default/objects/Account/fields/StatusAprovacao__c.field-meta.xml
<CustomField>
    <fullName>StatusAprovacao__c</fullName>
    <label>Status de Aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
            <value>
                <fullName>Needs Approval</fullName>
                <default>true</default>
                <label>Needs Approval</label>
            </value>
            <value>
                <fullName>Waiting for Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>