force-app/main/default/objects/Account/fields/SubSetor__c.field-meta.xml
<CustomField>
    <fullName>SubSetor__c</fullName>
    <label>Sub-Setor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amostra</fullName>
            </value>
            <value>
                <fullName>Central de Compras</fullName>
            </value>
            <value>
                <fullName>Clínica Particular</fullName>
            </value>
            <value>
                <fullName>Clínica Veterinária</fullName>
            </value>
            <value>
                <fullName>Cosmetic Surgery</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Distribuidor</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Estadual</fullName>
            </value>
            <value>
                <fullName>Farmácia</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>Health Centre</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Hospital Distributor</fullName>
            </value>
            <value>
                <fullName>Hospital Privado</fullName>
            </value>
            <value>
                <fullName>Hospital Público</fullName>
            </value>
            <value>
                <fullName>Integração CRM</fullName>
            </value>
            <value>
                <fullName>Kit manufacturer</fullName>
            </value>
            <value>
                <fullName>Laboratório</fullName>
            </value>
            <value>
                <fullName>Laboratório Privado</fullName>
            </value>
            <value>
                <fullName>Laboratório Público</fullName>
            </value>
            <value>
                <fullName>Market Place</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Municipal</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Pessoa Física</fullName>
            </value>
            <value>
                <fullName>Produto</fullName>
            </value>
            <value>
                <fullName>Rede de Farmácias</fullName>
            </value>
            <value>
                <fullName>Retail Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>