force-app/main/default/objects/Account/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Pharmacy</fullName>
            </value>
            <value>
                <fullName>Independent Pharmacy</fullName>
            </value>
            <value>
                <fullName>Compounding Pharmacy</fullName>
            </value>
            <value>
                <fullName>Hospital Pharmacy</fullName>
            </value>
            <value>
                <fullName>LTC Pharmacy</fullName>
            </value>
            <value>
                <fullName>Specialty Pharmacy</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Testimonial Patient</fullName>
            </value>
            <value>
                <fullName>Clinic Study Patient</fullName>
            </value>
            <value>
                <fullName>Corporate Head Office (Pharmacy)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>