force-app/main/default/objects/Account/fields/Suite_Room__c.field-meta.xml
<CustomField>
    <fullName>Suite_Room__c</fullName>
    <label>Suite/Room</label>
    <length>255</length>
    <type>Text</type>
</CustomField>