force-app/main/default/objects/Account/fields/SumOfOrders__c.field-meta.xml
<CustomField>
    <fullName>SumOfOrders__c</fullName>
    <label>SumOfOrders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>