force-app/main/default/objects/Account/fields/TaxExemptAccount__c.field-meta.xml
<CustomField>
    <fullName>TaxExemptAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TaxExemptAccount</label>
    <type>Checkbox</type>
</CustomField>