force-app/main/default/objects/Account/fields/Trade_Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show_Name__c</fullName>
    <description>If the account source is &quot;Trade Show&quot;, enter the name of the Trade Show in This field</description>
    <inlineHelpText>If the account source is &quot;Trade Show&quot;, enter the name of the Trade Show in This field</inlineHelpText>
    <label>Trade Show Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>