force-app/main/default/objects/Account/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Created to replace standard field Type, in order to Map Lead Conversion Fields properly.</description>
    <inlineHelpText>Tipo de Conta.
Você precisa mudar este campo para &quot;Customer&quot; para que o cadastro seja integrado para o SAP. Caso selecione &quot;Prospect&quot;, o cadastro existirá apenas no CRM</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
                <isActive>false</isActive>
                <label>OEM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>