force-app/main/default/objects/Account/fields/X810_Invoice__c.field-meta.xml
<CustomField>
    <fullName>X810_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>810 – Invoice</label>
    <type>Checkbox</type>
</CustomField>