force-app/main/default/objects/Account/fields/X850_Orders__c.field-meta.xml
<CustomField>
    <fullName>X850_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>850 - Orders</label>
    <type>Checkbox</type>
</CustomField>