force-app/main/default/objects/Account/fields/X855_Order_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>X855_Order_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>855 – Order Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>