force-app/main/default/objects/Account/fields/X856_Advanced_Ship_Notice__c.field-meta.xml
<CustomField>
    <fullName>X856_Advanced_Ship_Notice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>856 – Advanced Ship Notice</label>
    <type>Checkbox</type>
</CustomField>