force-app/main/default/objects/Account/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <inlineHelpText>Shipping Address zone. Synchronized with SAP.</inlineHelpText>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Poland</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>German East, Czech Rep, Slovakia, Latvia, Lithuania</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Estonia, German West, Austria, Benelux, Italy North, Hungary</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Switzerland</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Denmark</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Italy South</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Finland, Sweden</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Norway</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>France</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Spain East</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Spain West</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Portugal</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Ireland</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>UK</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Middle East</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Greece</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Romania, Bulgaria, Serbia, Kosovo</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Slovenia, Croatia</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Iceland</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Nigeria, Morocco</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>RPA</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Malta, Tenerife</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>All other (cost not supported, ie. China, USA, outside Europe)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>