force-app/main/default/objects/Account/recordTypes/Account_EMEA.recordType-meta.xml
<RecordType>
    <fullName>Account_EMEA</fullName>
    <active>true</active>
    <label>EMEA</label>
</RecordType>