force-app/main/default/objects/Account/recordTypes/Account_NACA.recordType-meta.xml
<RecordType>
    <fullName>Account_NACA</fullName>
    <active>true</active>
    <description>North America</description>
    <label>NACA</label>
</RecordType>