force-app/main/default/objects/Account/recordTypes/APAC.recordType-meta.xml
<RecordType>
    <fullName>APAC</fullName>
    <active>true</active>
    <label>APAC</label>
</RecordType>