force-app/main/default/objects/Account/validationRules/CheckQtyofBeds.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckQtyofBeds</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
NOT(ISPICKVAL(Hospital_Type__c, &quot;&quot;)),
 Bed_Count__c &lt; 1
)</errorConditionFormula>
    <errorDisplayField>Bed_Count__c</errorDisplayField>
    <errorMessage>Please, indicate the quantity of beds for this Hospital.</errorMessage>
</ValidationRule>