force-app/main/default/objects/Account/validationRules/CidadeCobrancPreenchidaELookupPreenchido.validationRule-meta.xml
<ValidationRule>
    <fullName>CidadeCobrancPreenchidaELookupPreenchido</fullName>
    <active>true</active>
    <description>Exclusivo SA. Verifica se o campo de pesquisa da cidade de cobrança foi preenchido...</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;SA&quot;,
    BillingCountry = &quot;Brasil&quot;,
    OR(
        NOT(ISBLANK(BillingCity)),
        NOT(ISBLANK(BillingStreet))
    ),
    ISBLANK(CidadeCobranca__r.Name),
    RecordType.DeveloperName = &quot;Brazil&quot;
)</errorConditionFormula>
    <errorDisplayField>CidadeCobranca__c</errorDisplayField>
    <errorMessage>O preenchimento do campo Cidade de Cobrança é obrigatório.</errorMessage>
</ValidationRule>