force-app/main/default/objects/Account/validationRules/Enforce_Subtype_When_Type_Patient_Or_Pha.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Subtype_When_Type_Patient_Or_Pha</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Type, &quot;Patient&quot;),
        ISPICKVAL(Type, &quot;Pharmacy&quot;)
    ),
    ISBLANK(TEXT(Subtype__c)),
    $RecordType.Name = &quot;NACA&quot;
)</errorConditionFormula>
    <errorMessage>Please select a Subtype when Type is Patient or Pharmacy.</errorMessage>
</ValidationRule>