force-app/main/default/objects/Account/validationRules/NameLength.validationRule-meta.xml
<ValidationRule>
    <fullName>NameLength</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    LEN(Name) &gt; 80,
    RecordType.DeveloperName = &quot;Brazil&quot;
)</errorConditionFormula>
    <errorDisplayField>X810_Invoice__c</errorDisplayField>
    <errorMessage>O nome do cliente deve conter no máximo 80 caracteres.</errorMessage>
</ValidationRule>