force-app/main/default/objects/Account/validationRules/No_letters_in_phone_and_mobile_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>No_letters_in_phone_and_mobile_fields</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX( Phone , &quot;(?=.*[a-zA-Z]).*$&quot;)
&amp;&amp; ISBLANK( SAP_Code__c )</errorConditionFormula>
    <errorMessage>Do not use letters in Phone fields.</errorMessage>
</ValidationRule>